--- a/app/import/show/show.component.html
+++ b/app/import/show/show.component.html
@@ -2,7 +2,7 @@
     <StackLayout class="page-content">
         <StackLayout class="modal-container">
             <StackLayout class="body-container">
-                <Label class="solo fa" textWrap="true" text="Is this your Burst address?"></Label>
+                <Label class="solo fa" textWrap="true" [text]="'IMPORT.SHOW.QUESTION' | translate"></Label>
                 <Label class="bottom font-weight-bold" [text]="address"></Label>
                 <GridLayout rows="auto" columns="*,*">
                     <Button col="0" class="btn btn-primary btn-active fa" text="&#xf00d;" (tap)="onTapNo()"></Button>
