--- a/app/import/import.component.html
+++ b/app/import/import.component.html
@@ -1,7 +1,7 @@
 <ActionBar class="action-bar">
     <StackLayout orientation="horizontal">
         <Image class="logo-tiny m-r-15" src="res://logo"></Image>
-        <Label class="action-bar-title" text="Import Existing Account"></Label>
+        <Label class="action-bar-title" [text]="'IMPORT.ACTION_BAR_TITLE' | translate"></Label>
     </StackLayout>
 </ActionBar>
 
