--- a/app/tabs/accounts/accounts.component.html
+++ b/app/tabs/accounts/accounts.component.html
@@ -7,7 +7,7 @@
                     <Label *ngIf="item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf111;"></Label>
                     <Label *ngIf="!item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf10c;"></Label>
 
-                    <Label col="0" row="1" colspan="3" rowspan="2" class="balance text-center" [text]="'Balance: ' + item.balance + ' BURST'"></Label>
+                    <Label col="0" row="1" colspan="3" rowspan="2" class="balance text-center" [text]="('TABS.ACCOUNTS.BALANCE' | translate) + ': ' + item.balance + ' BURST'"></Label>
 
                     <Label *ngIf="item.type == 'active'" col="4" row="0" class="text-center fa active-indicator" text="&#xf00c;"></Label>
                     <Label *ngIf="item.type == 'offline'" col="4" row="0" class="text-center fa active-indicator" text="&#xf05e;"></Label>
