--- a/app/tabs/settings/currency/currency.component.html
+++ b/app/tabs/settings/currency/currency.component.html
@@ -2,7 +2,7 @@
     <StackLayout class="page-content">
         <StackLayout class="modal-container">
             <StackLayout class="body-container">
-                <Label class="solo fa" textWrap="true" text="Change currency:"></Label>
+                <Label class="solo fa" textWrap="true" [text]="'&#xf0d6; ' + ('TABS.SETTINGS.CURRENCY.CURRENCY' | translate)"></Label>
                 <ListPicker [items]="currencies" [selectedIndex]="index" (selectedIndexChange)="selectedIndexChanged($event)" class="p-5"></ListPicker>
                 <Button class="btn btn-primary btn-active action-button fa" text="&#xf05d;" (tap)="onTapOk()"></Button>
             </StackLayout>
