--- a/app/tabs/settings/about/about.component.html
+++ b/app/tabs/settings/about/about.component.html
@@ -2,12 +2,12 @@
     <StackLayout class="page-content">
         <StackLayout class="modal-container">
             <StackLayout class="body-container">
-                <Label class="solo fa" textWrap="true" [text]="'Version: ' + version"></Label>
-                <Label class="solo fa" textWrap="true" text="Follow us on twitter to get updates on our projects!"></Label>
+                <Label class="solo fa" textWrap="true" [text]="('TABS.SETTINGS.ABOUT.VERSION' | translate) + ': ' + version"></Label>
+                <Label class="solo fa" textWrap="true" [text]="'TABS.SETTINGS.ABOUT.TWITTER' | translate"></Label>
                 <Button class="btn btn-primary btn-active about-button fa" text="&#xf099; PoC Consortium" (tap)="onTapTwitter()"></Button>
-                <Label class="solo fa" textWrap="true" text="Developed by"></Label>
+                <Label class="solo fa" textWrap="true" [text]="'TABS.SETTINGS.ABOUT.DEVELOPED' | translate"></Label>
                 <Image class="dev-logo p-b-10" src="res://icewavelogo"></Image>
-                <Label class="solo fa" textWrap="true" text="In Association with"></Label>
+                <Label class="solo fa" textWrap="true" [text]="'TABS.SETTINGS.ABOUT.ASSOCIATION' | translate"></Label>
                 <GridLayout class="p-l-20 p-r-20" rows="auto" columns="*,*">
                     <Image col="0" class="logo-tiny text-center" src="res://poclogo"></Image>
                     <Image col="1" class="logo-tiny text-center" src="res://cglogo"></Image>
