--- a/app/tabs/settings/language/language.component.html
+++ b/app/tabs/settings/language/language.component.html
@@ -2,8 +2,8 @@
     <StackLayout class="page-content">
         <StackLayout class="modal-container">
             <StackLayout class="body-container">
-                <Label class="solo fa" textWrap="true" text="Change currency:"></Label>
-                <ListPicker [items]="languages" [selectedIndex]="index" (selectedIndexChange)="selectedIndexChanged($event)" class="p-5"></ListPicker>
+                <Label class="solo fa" textWrap="true" [text]="'&#xf1ab; ' + ('TABS.SETTINGS.LANGUAGE.LANGUAGE' | translate)"></Label>
+                <ListPicker [items]="languageNames" [selectedIndex]="index" (selectedIndexChange)="selectedIndexChanged($event)" class="p-5"></ListPicker>
                 <Button class="btn btn-primary btn-active action-button fa" text="&#xf05d;" (tap)="onTapOk()"></Button>
             </StackLayout>
         </StackLayout>
