--- a/app/tabs/accounts/add/add.component.html
+++ b/app/tabs/accounts/add/add.component.html
@@ -2,8 +2,8 @@
     <StackLayout class="page-content">
         <StackLayout class="modal-container">
             <StackLayout class="body-container">
-                <Button class="btn btn-primary btn-active action-button fa" text="Import &#xf019;" (tap)="onTapImport()"></Button>
-                <Button class="btn btn-primary btn-active action-button fa" text="Create &#xf067;" (tap)="onTapCreate()"></Button>
+                <Button class="btn btn-primary btn-active action-button fa" [text]="('TABS.ACCOUNTS.IMPORT' | translate) + ' &#xf019;'" (tap)="onTapImport()"></Button>
+                <Button class="btn btn-primary btn-active action-button fa" [text]="('TABS.ACCOUNTS.CREATE' | translate) + ' &#xf067;'" (tap)="onTapCreate()"></Button>
             </StackLayout>
         </StackLayout>
     </StackLayout>
