--- a/app/tabs/settings/settings.component.html
+++ b/app/tabs/settings/settings.component.html
@@ -2,7 +2,7 @@
     <StackLayout orientation="vertical">
         <StackLayout class="settings-item" orientation="vertical">
             <GridLayout rows="auto, auto, auto, auto, auto, auto" columns="*">
-                <Button row="0" col="0" class="btn btn-primary fa settings-button" [text]="'&#xf1ab; ' + ('TABS.SETTINGS.LANGUAGE.LANGUAGE' | translate) + ': ' + settings.language" (tap)="onTapLanguage()"></Button>
+                <Button row="0" col="0" class="btn btn-primary fa settings-button" [text]="'&#xf1ab; ' + ('TABS.SETTINGS.LANGUAGE.LANGUAGE' | translate) + ': ' + languageNames[languages.indexOf(settings.language)]" (tap)="onTapLanguage()"></Button>
                 <Button row="1" col="0" class="btn btn-primary fa settings-button" [text]="'&#xf0d6; ' + ('TABS.SETTINGS.CURRENCY.CURRENCY' | translate) + ': ' + settings.currency" (tap)="onTapCurrency()"></Button>
                 <Button row="2" col="0" class="btn btn-primary fa settings-button" [text]="'&#xf277; ' + ('TABS.SETTINGS.NODE.NODE' | translate)" (tap)="onTapNode()"></Button>
                 <Button row="3" col="0" class="btn btn-primary fa settings-button" [text]="'&#xf02d; ' + ('TABS.SETTINGS.DOCUMENTATION.DOCUMENTATION' | translate)" (tap)="onTapDocumentation()"></Button>
