ios madness, gridlayouts, close buttons, etc.

--- a/app/app.ios.scss
+++ b/app/app.ios.scss
@@ -77,6 +77,16 @@ Page {
 .fa {
    font-family: "FontAwesome";
 }
+
+.modal-container {
+    height:100%;
+    vertical-align: middle;
+}
+
+.icon-button {
+    height: 50;
+    width: 50;
+}
 // Common page class
 .page-content {
 
