--- a/app/app.ios.scss
+++ b/app/app.ios.scss
@@ -1,6 +1,6 @@
 
 // Start custom common variables
-@import 'app-variables';
+@import 'app-ios-variables';
 // End custom common variables
 
 // Import the theme’s main ruleset.
