--- a/app/tabs/balance/balance.component.ios.scss
+++ b/app/tabs/balance/balance.component.ios.scss
@@ -1,4 +1,4 @@
-@import '../../app-variables';
+@import '../../app-ios-variables';
 
 .balance-container {
     background-color: $background-light;
