--- a/app/views/send/input/input.component.android.html
+++ b/app/views/send/input/input.component.android.html
@@ -9,9 +9,9 @@
     <StackLayout class="hr-light m-t-10 m-b-10"></StackLayout>
     <GridLayout class="text-left m-b-10" columns="100, auto, 70, *" rows="auto, auto">
         <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" [text]="'&#xf0d6; ' + ('SEND.AMOUNT' | translate)"></Label>
-        <TextField col="0" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="amount" (ngModelChange)="verifyInputs('amount')"></TextField>
+        <TextField col="0" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="amount"></TextField>
         <Label col="2" row="0" class="p-t-5 p-b-5 big-label fa" [text]="'&#xf0ec; ' + ('SEND.FEE' | translate)"></Label>
-        <TextField col="2" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="fee" (ngModelChange)="verifyInputs('fee')"></TextField>
+        <TextField col="2" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="fee"></TextField>
         <Label col="1" row="1" rowspan="2" class="p-10 fa text-center" text="+"></Label>
         <Label col="3" row="1" rowspan="2" class="p-5 fa text-center" [text]="'= ' + marketService.getPriceFiatCurrency(total)"></Label>
     </GridLayout>
