--- a/app/views/tabs/balance/balance.component.ios.html
+++ b/app/views/tabs/balance/balance.component.ios.html
@@ -16,9 +16,9 @@
                     <Label class="text-center fa p-t-10 p-b-10" [text]="marketService.getPriceBTC(account.balance) + '  &#xf0ec;  ' + marketService.getPriceFiatCurrency(account.balance)"></Label>
                 </StackLayout>
                 <StackLayout orientation="vertical">
-                    <Button *ngIf="account?.type == 'active'" class="btn btn-primary btn-active action-button fa" text="Send &#xf08b;" [nsRouterLink]="['/tabs/balance/send']"></Button>
+                    <Button *ngIf="account?.type == 'active'" class="btn btn-primary btn-active action-button fa" text="Send &#xf08b;" [nsRouterLink]="['/send']"></Button>
                     <!--<Button class="btn btn-primary btn-active action-button" text="Receive" (tap)="onTapReceive($event)"></Button>-->
-                    <Button *ngIf="account?.type == 'offline'" class="btn btn-primary btn-active action-button fa" text="Activate &#xf05d;" [nsRouterLink]="['/tabs/accounts/activate']"></Button>
+                    <Button *ngIf="account?.type == 'offline'" class="btn btn-primary btn-active action-button fa" text="Activate &#xf05d;" [nsRouterLink]="['/activate']"></Button>
                 </StackLayout>
             </StackLayout>
         </ng-template>
