--- a/app/views/send/input/input.component.android.scss
+++ b/app/views/send/input/input.component.android.scss
@@ -1,5 +1,6 @@
 .big-label {
     font-size: 14;
+    vertical-align: center;
 }
 
 .huge-label {
@@ -15,7 +16,36 @@
     width: 50%;
 }
 
-.scan-button {
+.icon-button {
     height: 50;
     width: 50;
+}
+
+
+.drawerContentText {
+    font-size: 13;
+    padding: 10;
+}
+
+.drawerContentButton {
+    margin: 10;
+    horizontal-align: left;
+}
+
+.sideStackLayout {
+    background-color: gray;
+}
+
+.sideTitleStackLayout {
+    height: 56;
+    text-align: center;
+    vertical-align: center;
+}
+
+.sideLabel {
+    padding: 10;
+}
+
+.sideLightGrayLabel {
+    background-color: lightgray;
 }
