--- a/app/views/send/input/input.component.ios.html
+++ b/app/views/send/input/input.component.ios.html
@@ -1,22 +1,26 @@
-<StackLayout class="body-container" orientation="vertical">
-    <Label class="font-italic p-b-15 huge-label" [text]="'Balance: ' + balance"></Label>
-    <StackLayout class="hr-light"></StackLayout>
-    <GridLayout class="text-left m-t-10" columns="*7, *2" rows="auto, auto">
-        <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf2bc; Recipient"></Label>
-        <TextField col="0" row="1" class="input recipient-input" [(ngModel)]="recipient" (returnPress)="formatRecipient()"></TextField>
-        <Button col="1" row="0" rowspan="2" class="icon-button btn btn-primary btn-active fa text-center" text="&#xf083;" (tap)=onTapScan($event)></Button>
-    </GridLayout>
-    <StackLayout class="hr-light m-t-10 m-b-10"></StackLayout>
-    <GridLayout class="text-left m-b-10" columns="100, auto, 70, *" rows="auto, auto">
-        <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0d6; Amount"></Label>
-        <TextField col="0" row="1" class="input input-border number-input" keyboardType="number" [(ngModel)]="amount" (ngModelChange)="verifyInputs('amount')"></TextField>
-        <Label col="2" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0ec; Fee"></Label>
-        <TextField col="2" row="1" class="input input-border number-input" keyboardType="number" [(ngModel)]="fee" (ngModelChange)="verifyInputs('fee')"></TextField>
-        <Label col="1" row="1" rowspan="2" class="p-10 fa text-center" text="+"></Label>
-        <Label col="3" row="1" rowspan="2" class="p-5 fa text-center" [text]="'= ' + marketService.getPriceFiatCurrency(total)"></Label>
-    </GridLayout>
-    <StackLayout class="hr-light"></StackLayout>
-</StackLayout>
-<StackLayout class="m-b-20" orientation="vertical">
-    <Button class="btn btn-primary btn-active action-button fa" text="Verify &#xf132;" (tap)="onTapVerify($event)"></Button>
+<StackLayout class="page-content" orientation="vertical">
+    <StackLayout class="container">
+        <StackLayout class="body-container" orientation="vertical">
+            <Label class="font-italic p-b-15 huge-label" [text]="'Balance: ' + balance"></Label>
+            <StackLayout class="hr-light"></StackLayout>
+            <GridLayout class="text-left m-t-10" columns="*7, *2" rows="auto, auto">
+                <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf2bc; Recipient"></Label>
+                <TextField col="0" row="1" class="input recipient-input" [(ngModel)]="recipient" (returnPress)="formatRecipient()"></TextField>
+                <Button col="1" row="0" rowspan="2" class="icon-button btn btn-primary btn-active fa text-center" text="&#xf083;" (tap)=onTapScan($event)></Button>
+            </GridLayout>
+            <StackLayout class="hr-light m-t-10 m-b-10"></StackLayout>
+            <GridLayout class="text-left m-b-10" columns="100, auto, 70, *" rows="auto, auto">
+                <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0d6; Amount"></Label>
+                <TextField col="0" row="1" class="input input-border number-input" keyboardType="number" [(ngModel)]="amount" (ngModelChange)="verifyInputs('amount')"></TextField>
+                <Label col="2" row="0" class="p-t-5 p-b-5 big-label fa" text="&#xf0ec; Fee"></Label>
+                <TextField col="2" row="1" class="input input-border number-input" keyboardType="number" [(ngModel)]="fee" (ngModelChange)="verifyInputs('fee')"></TextField>
+                <Label col="1" row="1" rowspan="2" class="p-10 fa text-center" text="+"></Label>
+                <Label col="3" row="1" rowspan="2" class="p-5 fa text-center" [text]="'= ' + marketService.getPriceFiatCurrency(total)"></Label>
+            </GridLayout>
+            <StackLayout class="hr-light"></StackLayout>
+        </StackLayout>
+        <StackLayout class="m-b-20" orientation="vertical">
+            <Button class="btn btn-primary btn-active action-button fa" text="Verify &#xf132;" (tap)="onTapVerify($event)"></Button>
+        </StackLayout>
+    </StackLayout>
 </StackLayout>
