--- a/app/views/send/input/input.component.android.html
+++ b/app/views/send/input/input.component.android.html
@@ -22,31 +22,24 @@
                     <Button col="2" style="margin-left: 0px" class="icon-button btn btn-primary btn-active fa text-center" text="&#xf083;" (tap)=onTapScan($event)></Button>
                 </GridLayout>
                 <StackLayout class="hr-light"></StackLayout>
-                <!--
-                <GridLayout class="text-left m-t-10" columns="*9, *2" rows="auto, auto">
-                    <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" [text]="'&#xf2bc; ' + ('SEND.RECIPIENT' | translate)"></Label>
-                    <TextField col="0" row="1" class="input recipient-input" [(ngModel)]="recipient" (returnPress)="formatRecipient()"></TextField>
-                    <Button col="1" row="0" rowspan="2" class="scan-button btn btn-primary btn-active fa text-center" text="&#xf083;" (tap)=onTapScan($event)></Button>
-                </GridLayout>
-                --->
                 <GridLayout class="text-left m-t-10" columns="auto, 4*, auto, 4*, auto, 4*, auto, 5*" rows="auto, auto">
                     <Label col="0" colspan="3" row="0" class="p-t-5 p-b-5 big-label fa" [text]="'&#xf2bc; ' + ('SEND.RECIPIENT' | translate)"></Label>
 
                     <Label col="0" row="1" class="big-label fa" text="BURST-"></Label>
-                    <TextField col="1" row="1" class="input recipient-input" [(ngModel)]="recipient" (returnPress)="formatRecipient()"></TextField>
+                    <TextField col="1" row="1" class="input recipient-input" [(ngModel)]="recipientParts[0]" (returnPress)="formatRecipient()"></TextField>
                     <Label col="2" row="1" class="big-label fa" text="-"></Label>
-                    <TextField col="3" row="1" class="input recipient-input" [(ngModel)]="recipient" (returnPress)="formatRecipient()"></TextField>
+                    <TextField col="3" row="1" class="input recipient-input" [(ngModel)]="recipientParts[1]" (returnPress)="formatRecipient()"></TextField>
                     <Label col="4" row="1" class="big-label fa" text="-"></Label>
-                    <TextField col="5" row="1" class="input recipient-input" [(ngModel)]="recipient" (returnPress)="formatRecipient()"></TextField>
+                    <TextField col="5" row="1" class="input recipient-input" [(ngModel)]="recipientParts[2]" (returnPress)="formatRecipient()"></TextField>
                     <Label col="6" row="1" class="big-label fa" text="-"></Label>
-                    <TextField col="7" row="1" class="input recipient-input" [(ngModel)]="recipient" (returnPress)="formatRecipient()"></TextField>
+                    <TextField col="7" row="1" class="input recipient-input" [(ngModel)]="recipientParts[3]" (returnPress)="formatRecipient()"></TextField>
                 </GridLayout>
                 <StackLayout class="hr-light m-t-10 m-b-10"></StackLayout>
                 <GridLayout class="text-left m-b-10" columns="100, auto, 70, *" rows="auto, auto">
                     <Label col="0" row="0" class="p-t-5 p-b-5 big-label fa" [text]="'&#xf0d6; ' + ('SEND.AMOUNT' | translate)"></Label>
-                    <TextField col="0" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="amount"></TextField>
+                    <TextField col="0" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="amount" (ngModelChange)="calculateTotal('amount')"></TextField>
                     <Label col="2" row="0" class="p-t-5 p-b-5 big-label fa" [text]="'&#xf0ec; ' + ('SEND.FEE' | translate)"></Label>
-                    <TextField col="2" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="fee"></TextField>
+                    <TextField col="2" row="1" class="input-border number-input" keyboardType="number" [(ngModel)]="fee" (ngModelChange)="calculateTotal('fee')"></TextField>
                     <Label col="1" row="1" rowspan="2" class="p-10 fa text-center" text="+"></Label>
                     <Label col="3" row="1" rowspan="2" class="p-5 fa text-center" [text]="'= ' + marketService.getPriceFiatCurrency(total)"></Label>
                 </GridLayout>
